--- a/HsHnApp/www/index.html
+++ b/HsHnApp/www/index.html
@@ -38,8 +38,8 @@
         <a class="navmenu-brand visible-md visible-lg" href="#"><img src="https://www.hs-heilbronn.de/905164/HHN_ab_40_mm_4c_pos.jpg" width="100" height="40" /></a>
         <ul class="nav navmenu-nav">
             <li class="active"><a href="./">Home</a></li>
-            <li><a href="#/Test">Route berechnen</a></li>
-            <li><a href="./Test">HHN Standorte</a></li>
+            <li><a href="#/standorte">Route berechnen</a></li>
+            <li><a href="#/standorte">HHN Standorte</a></li>
         </ul>
     </div>
 
@@ -71,7 +71,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.2/angular-route.js"></script>
 
     <script src="scripts/app.js"></script>
-    <script src="scripts/Controller/controllers.js"></script>
+    <script src="scripts/Controller/HomeController.js"></script>
+    <script src="scripts/Controller/StandorteController.js"></script>
 
 
 
