--- a/HsHnApp/www/index.html
+++ b/HsHnApp/www/index.html
@@ -38,7 +38,7 @@
         <a class="navmenu-brand visible-md visible-lg" href="#"><img src="https://www.hs-heilbronn.de/905164/HHN_ab_40_mm_4c_pos.jpg" width="100" height="40" /></a>
         <ul class="nav navmenu-nav">
             <li class="active"><a href="./">Home</a></li>
-            <li><a href="#/standorte">Route berechnen</a></li>
+            <li><a href="#/route">Route berechnen</a></li>
             <li><a href="#/standorte">HHN Standorte</a></li>
         </ul>
     </div>
@@ -73,6 +73,7 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/Controller/HomeController.js"></script>
     <script src="scripts/Controller/StandorteController.js"></script>
+    <script src="scripts/Controller/RouteBerechnenController.js"></script>
 
 
 
